My card section fixed, new views added, tables were organised

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 spring.main.allow-circular-references=true
 spring.jpa.open-in-view=false
 
+spring.session.jdbc.table-name=SPRING_SESSION
+
