--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 
 spring.main.allow-circular-references=true
 spring.jpa.open-in-view=false
+spring.thymeleaf.cache=false
 
 spring.session.jdbc.table-name=SPRING_SESSION
 
