reservation bugs fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/flight_management
+spring.datasource.url=jdbc:postgresql://localhost:5432/test123
 spring.datasource.username=springuser
 spring.datasource.password=springuser
 spring.jpa.hibernate.ddl-auto=update
